force-app/main/default/objects/Zoom_Meeting__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <description>It stores the complete meeting agenda</description>
    <inlineHelpText>It stores the complete meeting agenda</inlineHelpText>
    <label>Agenda</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>