force-app/main/default/objects/Zoom_Meeting__c/fields/Allow_Multiple_Devices__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Devices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It Allows attendees to join from multiple devices</description>
    <inlineHelpText>It Allows attendees to join from multiple devices</inlineHelpText>
    <label>Allow Multiple Devices</label>
    <type>Checkbox</type>
</CustomField>