force-app/main/default/objects/Zoom_Meeting__c/fields/Auto_Register__c.field-meta.xml
<CustomField>
    <fullName>Auto_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It specifies that user don&apos;t need to register to join any meeting if it is checked</description>
    <inlineHelpText>It specifies that user don&apos;t need to register to join any meeting if it is checked</inlineHelpText>
    <label>Auto Register</label>
    <type>Checkbox</type>
</CustomField>