force-app/main/default/objects/Zoom_Meeting__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign to which this meeting belongs to</description>
    <inlineHelpText>The campaign to which this meeting belongs to</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Zoom Meetings</relationshipLabel>
    <relationshipName>Zoom_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>