force-app/main/default/objects/Zoom_Meeting__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>It stores meeting duration</description>
    <inlineHelpText>It stores meeting duration</inlineHelpText>
    <label>Duration (In Minutes)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>