force-app/main/default/objects/Zoom_Meeting__c/fields/Enforce_Login__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only signed-in users can join this meeting</description>
    <inlineHelpText>Only signed-in users can join this meeting</inlineHelpText>
    <label>Enforce Login</label>
    <type>Checkbox</type>
</CustomField>