force-app/main/default/objects/Zoom_Meeting__c/fields/HD_Video__c.field-meta.xml
<CustomField>
    <fullName>HD_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It tells that make video resolution Defaults to HD video</description>
    <inlineHelpText>It tells that make video resolution Defaults to HD video</inlineHelpText>
    <label>HD Video</label>
    <type>Checkbox</type>
</CustomField>