force-app/main/default/objects/Zoom_Meeting__c/fields/Host_Id__c.field-meta.xml
<CustomField>
    <fullName>Host_Id__c</fullName>
    <label>Host Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>