force-app/main/default/objects/Zoom_Meeting__c/fields/Join_before_Host__c.field-meta.xml
<CustomField>
    <fullName>Join_before_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It stores whether the invitee can join the meeting before the host</description>
    <inlineHelpText>It stores whether the invitee can join the meeting before the host</inlineHelpText>
    <label>Join before Host</label>
    <type>Checkbox</type>
</CustomField>