force-app/main/default/objects/Zoom_Meeting__c/fields/Meeting_Participant_Details__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Participant_Details__c</fullName>
    <label>Meeting Participant Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>