force-app/main/default/objects/Zoom_Meeting__c/fields/Meeting_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recording_URL__c</fullName>
    <inlineHelpText>This stores the meeting recorded play url</inlineHelpText>
    <label>Meeting Recording URL</label>
    <type>Url</type>
</CustomField>