force-app/main/default/objects/Zoom_Meeting__c/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <description>It contains the created meeting URL</description>
    <inlineHelpText>It contains the created meeting URL</inlineHelpText>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>