force-app/main/default/objects/Zoom_Meeting__c/fields/Panelist_Video__c.field-meta.xml
<CustomField>
    <fullName>Panelist_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It tells that start the video when panelists join the webinar</description>
    <inlineHelpText>It tells that start the video when panelists join the webinar</inlineHelpText>
    <label>Panelist Video</label>
    <type>Checkbox</type>
</CustomField>