force-app/main/default/objects/Zoom_Meeting__c/fields/Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_URL__c</fullName>
    <description>It Contains the registration URL of the Meeting/Webinar in case of registration required.</description>
    <inlineHelpText>It Contains the registration URL of the Meeting/Webinar in case of registration required. It can be sent to any invitee externally also to register for the meeting</inlineHelpText>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>