force-app/main/default/objects/Zoom_Meeting__c/fields/Share_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Share_Recording_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Share Recording URL in the Thank you Email Notification. This Feature needs Thank you Email Notification Enabled.</inlineHelpText>
    <label>Share Recording URL</label>
    <type>Checkbox</type>
</CustomField>