force-app/main/default/objects/Zoom_Meeting__c/fields/Share_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Share_Survey_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Share Survey Link in the Thank you Email Notification. This Feature needs Thank you Email Notification Enabled.</inlineHelpText>
    <label>Share Survey Link</label>
    <type>Checkbox</type>
</CustomField>