force-app/main/default/objects/Zoom_Meeting__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>It contains the Start Date of the meeting</description>
    <inlineHelpText>It contains the Start Date of the meeting</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>