force-app/main/default/objects/Zoom_Meeting__c/fields/Start_Participant_Video_on_Meeting_Join__c.field-meta.xml
<CustomField>
    <fullName>Start_Participant_Video_on_Meeting_Join__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Start video when participants join meeting</description>
    <inlineHelpText>Start video when participants join meeting</inlineHelpText>
    <label>Start Participant Video on Meeting Join</label>
    <type>Checkbox</type>
</CustomField>