force-app/main/default/objects/Zoom_Meeting__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>It contains the Start Time of the Meeting</description>
    <inlineHelpText>It contains the Start Time of the Meeting</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>