force-app/main/default/objects/Zoom_Meeting__c/fields/Start_URL__c.field-meta.xml
<CustomField>
    <fullName>Start_URL__c</fullName>
    <description>It contains start URL</description>
    <inlineHelpText>It contains start URL</inlineHelpText>
    <label>Start URL</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>