force-app/main/default/objects/Zoom_Meeting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STARTED</fullName>
            </value>
            <value>
                <fullName>ENDED</fullName>
            </value>
            <value>
                <fullName>JBH</fullName>
            </value>
            <value>
                <fullName>JOIN</fullName>
            </value>
            <value>
                <fullName>RECORDING_MEETING_COMPLETED</fullName>
                <label>RECORDING MEETING COMPLETED</label>
            </value>
            <value>
                <fullName>CREATED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>