force-app/main/default/objects/Zoom_Meeting__c/fields/Survey_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link_URL__c</fullName>
    <inlineHelpText>This URL redirects to the survey page.</inlineHelpText>
    <label>Survey Link URL</label>
    <type>Url</type>
</CustomField>