force-app/main/default/objects/Zoom_Meeting__c/fields/Thank_you_notification__c.field-meta.xml
<CustomField>
    <fullName>Thank_you_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attendee will receive thank you email by checking this checkbox</inlineHelpText>
    <label>Thank you notification</label>
    <type>Checkbox</type>
</CustomField>