force-app/main/default/objects/Zoom_Meeting__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:45/+13:45) Chatham Standard / Daylight Time (Pacific/Chatham)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00/+13:00) New Zealand Standard / Daylight Time (Pacific/Auckland)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:30/+11:00) Lord Howe Standard / Daylight Time (Australia/Lord_Howe)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Norfolk Time (Pacific/Norfolk)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00/+11:00) Australian Eastern Standard / Daylight Time (New South Wales) (Australia/Sydney)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:30/+9:30) Australian Central Standard / Daylight Time (South Australia) (Australia/Adelaide)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
            </value>
            <value>
                <fullName>(GMT+09:00) Korea Standard Time (Asia/Seoul)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Philippines Time (Asia/Manila)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Singapore Time (Asia/Singapore)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) China Standard Time (Asia/Taipei)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
            </value>
            <value>
                <fullName>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</fullName>
            </value>
            <value>
                <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
            </value>
            <value>
                <fullName>(GMT+06:00) Bangladesh Time (Asia/Dhaka)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:45) Nepal Time (Asia/Kathmandu)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:30) India Standard Time (Asia/Kolkata)</fullName>
            </value>
            <value>
                <fullName>(GMT+05:30) India Standard Time (Asia/Colombo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>