force-app/main/default/objects/Zoom_Meeting__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>It stores topic of the meeting</description>
    <inlineHelpText>It stores topic of the meeting</inlineHelpText>
    <label>Topic</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>