force-app/main/default/objects/Zoom_Meeting__c/fields/Webhook_Response__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Response__c</fullName>
    <label>Webhook Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>