force-app/main/default/objects/Zoom_Meeting__c/recordTypes/Meeting.recordType-meta.xml
<RecordType>
    <fullName>Meeting</fullName>
    <active>true</active>
    <description>It creates a meeting in the Zoom and contains all the fields related to the meeting</description>
    <label>Meeting</label>
</RecordType>