force-app/main/default/objects/Zoom_Meeting__c/recordTypes/Webinar.recordType-meta.xml
<RecordType>
    <fullName>Webinar</fullName>
    <active>true</active>
    <description>It creates a webinar in the Zoom and contains all the information related to the webinar</description>
    <label>Webinar</label>
</RecordType>