force-app/main/default/objects/Zoom_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Campaign__c</columns>
    <columns>Topic__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Duration__c</columns>
    <columns>Meeting_URL__c</columns>
    <columns>Auto_Register__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>